--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "icti_back",
+  "name": "estancia_back",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.mjs",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
+    "ejs": "^3.1.9",
     "express": "^4.19.2",
     "express-myconnection": "^1.0.4",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.7",
-    "nodemon": "^3.1.0",
-    "sequelize": "^6.37.3",
+    "mysql2": "^3.9.4",
+    "sequelize": "^6.37.2",
     "sequelize-cli": "^6.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
